// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneEvent/> render() should render with closed details 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <img
          alt="incoming-phone-call"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Incoming call
      </span>
      <span>
        <i
          class="material-icons blue eventDetailsIcon cursor-pointer"
        >
          keyboard_arrow_down
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`<PhoneEvent/> render() should render with closed details 2`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <img
          alt="outgoing-phone-call"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Outgoing call
      </span>
      <span>
        <i
          class="material-icons blue eventDetailsIcon cursor-pointer"
        >
          keyboard_arrow_down
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`<PhoneEvent/> render() should render with closed details 3`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <img
          alt="completed-phone-call"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Call ended
      </span>
      <span>
        <i
          class="material-icons blue eventDetailsIcon cursor-pointer"
        >
          keyboard_arrow_down
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`<PhoneEvent/> render() should render with closed details 4`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <img
          alt="missed-phone-call"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Missed call
      </span>
    </div>
  </div>
</div>
`;

exports[`<PhoneEvent/> render() should render with closed details 5`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <img
          alt="voicemail-recording"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Voicemail left
      </span>
      <span>
        <i
          class="material-icons blue eventDetailsIcon cursor-pointer"
        >
          keyboard_arrow_down
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`<PhoneEvent/> render() should render with closed details 6`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <img
          alt="phone-call-answered"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Call answered
      </span>
      <span>
        <i
          class="material-icons blue eventDetailsIcon cursor-pointer"
        >
          keyboard_arrow_down
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`<PhoneEvent/> render() should render with opened details 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <img
          alt="voicemail-recording"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Voicemail left by Michael Gorgias
      </span>
      <span>
        <i
          class="material-icons blue eventDetailsIcon cursor-pointer"
        >
          keyboard_arrow_up
        </i>
      </span>
    </div>
  </div>
  <div
    class="eventDetails"
  >
    <div
      class="content"
    >
      <div>
        <b>
          Michael Gorgias
          :
        </b>
         
        +1 662 442 4075
      </div>
      <div>
        <b>
          Duration:
        </b>
         
        0min 0s
      </div>
      <div
        class="d-flex flex-column"
      >
        <div
          class="mb-3"
        >
          <b>
            Voicemail:
          </b>
        </div>
        <div>
          <audio
            controls=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneEvent/> render() should render with opened details 2`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <img
          alt="incoming-phone-call"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Incoming call from Michael Gorgias
      </span>
      <span>
        <i
          class="material-icons blue eventDetailsIcon cursor-pointer"
        >
          keyboard_arrow_up
        </i>
      </span>
    </div>
  </div>
  <div
    class="eventDetails"
  >
    <div
      class="content"
    >
      <div>
        <b>
          Michael Gorgias
          :
        </b>
         
        +1 662 442 4075
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneEvent/> render() should render with opened details 3`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <img
          alt="completed-phone-call"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Call ended
      </span>
      <span>
        <i
          class="material-icons blue eventDetailsIcon cursor-pointer"
        >
          keyboard_arrow_up
        </i>
      </span>
    </div>
  </div>
  <div
    class="eventDetails"
  >
    <div
      class="content"
    >
      <div>
        <b>
          Michael Gorgias
          :
        </b>
         
        +1 662 442 4075
      </div>
      <div>
        <b>
          Duration:
        </b>
         
        0min 0s
      </div>
    </div>
  </div>
</div>
`;
